--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">John Adams Middle School Yearbook</h1>
-      <h2 class="project-tagline"></h2>
+      <h2 class="project-tagline">The Staff</h2>
     </section>
 
     <section class="main-content">
       <h1>
-<a id="-test" class="anchor" href="#-test" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> 
-Test?
+<a id="-we-are-the-student-creators-of-the-yearbook" class="anchor" href="#-we-are-the-student-creators-of-the-yearbook" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> 
+We are the student creators of the yearbook.
 </h1>
 
       <footer class="site-footer">
