--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">John Adams Middle School Yearbook</h1>
-      <h2 class="project-tagline">The Staff</h2>
+      <h2 class="project-tagline">Everything Yearbook Related</h2>
     </section>
 
     <section class="main-content">
