--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="project-name">John Adams Middle School Yearbook</h1>
       <h2 class="project-tagline">2016/2017 Yearbook </h2>
     </section>
-  
+    <title> Jams Yearbook </title>
     <section class="main-content">
       <h1>
 <a id="-we-are-the-student-creators-of-the-yearbook" class="anchor" href="#-we-are-the-student-creators-of-the-yearbook" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> 
