--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Everything Yearbook Related
 
       <footer class="site-footer">
 
-       
+        <h1> News </h1>
       </footer>
 
     </section>
