--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ Everything Yearbook Related
       <footer class="site-footer">
 
         <h3> News </h3>
+        Click <a href="http://www.yahoo.com">here</a> to go to yahoo.
       </footer>
 
     </section>
