--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Everything Yearbook Related
       <footer class="site-footer">
 
         <h3> News </h3>
-        Click <a href="yearbookstaff.html">here</a> to go to yahoo.
+        Click <a href="The Yearbook Staff.html">here</a> to go to yahoo.
       </footer>
 
     </section>
