Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 
     <section class="main-content">
       <h1>
-<a id="-we-are-the-student-creators-of-the-yearbook" class="anchor" href="#-we-are-the-student-creators-of-the-yearbook" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> 
-Everything Yearbook Related
-</h1>
+<a id="-everything-yearbook-related" class="anchor" href="#-everything-yearbook-related" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> 
+Everything yearbook related</h1>
 
       <footer class="site-footer">
 
